fix: Remove White space appears on bottom of page after scrolling to the bottom

--- a/static/styles/animations/animated-background.css
+++ b/static/styles/animations/animated-background.css
@@ -1,5 +1,5 @@
 .animated-icon-mosaics {
-   opacity: 0.04;
+   opacity: 0.07;
 }
 
 .col-icon-mosaics {
